<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/navigationDrawerFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFF6700"
            android:contentDescription="@string/navigation_drawer"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/contactListFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFF6700"
            android:contentDescription="@string/contact_list"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/reportFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:backgroundTint="#FFFF6700"
            android:contentDescription="@string/report"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/directionsFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#FFFF6700"
            android:contentDescription="@string/directions"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/gpsFancyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            fancy:fb_text="GPS ON"
            fancy:fb_textColor="#FFFFFFFF"
            fancy:fb_textSize="18sp"
            fancy:fb_iconPosition="left"
            fancy:fb_defaultColor="#FFFF6700"
            fancy:fb_iconPaddingTop="16dp"
            fancy:fb_iconPaddingBottom="16dp"
            fancy:fb_radius="64dp"/>

        <it.beppi.tristatetogglebutton_library.TriStateToggleButton
            android:id="@+id/mapTypeTriStateToggleButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            app:tbBorderWidth="0dp"
            app:tbOffColor="#FFFF6700"
            app:tbMidColor="#FFFF6700"
            app:tbOnColor="#FFFF6700"
            app:tbSpotColor="#FFFFFFFF"
            app:tbDefaultStatus="mid" />

        <com.nambimobile.widgets.efab.ExpandableFabLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.nambimobile.widgets.efab.Overlay
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <com.nambimobile.widgets.efab.ExpandableFab
                android:id="@+id/landmarkExpandableFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:efab_color="#FFFF6700"/>
            <com.nambimobile.widgets.efab.FabOption
                android:id="@+id/firstFabOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label_text="Iwo Jima Memorial" />
            <com.nambimobile.widgets.efab.FabOption
                android:id="@+id/secondFabOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label_text="Lincoln Memorial" />
            <com.nambimobile.widgets.efab.FabOption
                android:id="@+id/thirdFabOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label_text="Washington Monument" />
            <com.nambimobile.widgets.efab.FabOption
                android:id="@+id/fourthFabOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label_text="US Capitol Building" />
            <com.nambimobile.widgets.efab.FabOption
                android:id="@+id/fifthFabOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label_text="Jefferson Memorial" />

        </com.nambimobile.widgets.efab.ExpandableFabLayout>

    </RelativeLayout>

</fragment>